--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,8 +8,11 @@
   "language": "Language",
   "languageUpdated": "Language updated to {language}",
   "english": "English",
-  "french": "French",
-  "spanish": "Spanish",
+  "french": "Francais",
+  "spanish": "Español",
+  "italian": "Italiano",
+  "chinese": "中文",
+  "portuguese": "Português",
   "manageEvmAddresses": "Manage Wallets",
   "hello": "Hello",
   "lastRentReceived": "Your last rent received amounts to ",
@@ -17,11 +20,12 @@
   "totalPortfolio": "Total Portfolio",
   "wallet": "Wallet",
   "rmm": "RMM",
-  "currency":"Currency",
+  "currency": "Currency",
   "rwaHoldings": "RWA Holdings SA",
   "properties": "Properties",
   "rented": "Rented",
   "rentedUnits": "Rented Units",
+  "units": "units",
   "tokens": "Tokens",
   "totalTokens": "Total Tokens",
   "rents": "Rents",
@@ -33,6 +37,7 @@
   "noRentReceived": "No rent received",
   "finances": "Finances",
   "others": "Others",
+  "othersTitle": "Details of the Others section",
   "insights": "Insights",
   "characteristics": "Characteristics",
   "constructionYear": "Year of construction",
@@ -70,11 +75,11 @@
   "totalValue": "Total Value",
   "amount": "Amount",
   "apy": "APY",
+  "averageApy": "average APY",
   "revenue": "Revenue",
   "day": "Day",
   "month": "Month",
   "year": "Year",
-  "noYieldEvolution": "No yield evolution. The last value is:",
   "appName": "RealToken",
   "appDescription": "mobile app for Community",
   "realTokensList": "RealTokens list",
@@ -120,7 +125,7 @@
   "sortByName": "Sort by Name",
   "sortByValue": "Sort by Value",
   "sortByAPY": "Sort by APY",
-  "sortByInitialLaunchDate":"sort by recently added",
+  "sortByInitialLaunchDate": "Sort by recently added",
   "ascending": "Ascending",
   "descending": "Descending",
   "tokenDistributionByCity": "Token Distribution by City",
@@ -139,19 +144,19 @@
   "xdaiBorrowBalance": "XDAI Borrow Balance",
   "ethereumContract": "Ethereum contract",
   "gnosisContract": "Gnosis contract",
-  "viewOnMap":"view on map",
+  "viewOnMap": "View on map",
   "maps": "Maps",
-  "totalRentReceived": "total of revenus",
-  "groupedRentGraph": "Grouped Rent Graph",
+  "totalRentReceived": "Total of revenues",
+  "groupedRentGraph": "Rents",
   "cumulativeRentGraph": "Cumulative Rent Graph",
   "roiPerProperties": "Property ROI",
   "roiAlertInfo": "This ROI feature is in beta and is currently calculated based on the income received from the property and the initial token value.",
-  "recentUpdatesTitle": "last 30 days",
+  "recentUpdatesTitle": "Last 30 days",
   "noRecentUpdates": "No recent changes available.",
   "unknownTokenName": "Unknown name",
   "noImageAvailable": "Image link not available",
-  "duplicate_title": "duplicate properties",
-  "duplicate": "properties present in multiple wallets/RMM",
+  "duplicate_title": "Duplicate properties",
+  "duplicate": "Properties present in multiple wallets/RMM",
   "futureRents": "Future Rents",
   "noFutureRents": "No future rents",
   "nextRondays": "Next Rondays",
@@ -161,23 +166,15 @@
   "allWorkCorrectly": "Everything is working correctly",
   "somethingWrong": "The data may not be up to date",
   "realTTitle": "RealT",
-  "totalTokens": "Total Tokens",
-  "tokens": "tokens",
-  "totalInvestment": "Total Investment",
   "netAnnualRent": "Net Annual Rent",
-  "totalUnits": "Total Units",
-  "units": "units",
-  "rentedUnits": "rented units",
   "realTPerformance": "RealT Performance",
-  "annualYield": "annual yield",
-  "textSize":"Text size",
-  "convertSqft":"Convert sqft to m²",
+  "textSize": "Text size",
+  "convertSqft": "Convert sqft to m²",
   "rentStartFuture": "Rent not started",
   "confirmAction": "Confirm Action",
   "areYouSureClearData": "Are you sure you want to clear cache and data?",
   "cancel": "Cancel",
   "confirm": "Confirm",
-  "clearCacheData": "Clear Cache and Data",
   "exportData": "Export Data",
   "importData": "Import Data",
   "exportSuccess": "Data exported successfully",
@@ -187,5 +184,9 @@
   "importExportData": "Import or export data (zip)",
   "aboutImportExportTitle": "Import/Export Function",
   "aboutImportExport": "This function allows you to save and re-import balance history data (wallet and RMM) into a ZIP file.",
-  "walletBalanceHistory": "Wallet Balance History"
+  "walletBalanceHistory": "Wallet Balance History",
+  "hours": "Hours",
+  "days": "Days",
+  "weeks": "Weeks",
+  "period": "Period"
 }
