--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -7,9 +7,12 @@
   "themeUpdated": "Tema actualizado a {theme}",
   "language": "Idioma",
   "languageUpdated": "Idioma actualizado a {language}",
-  "english": "Inglés",
-  "french": "Francés",
-  "spanish": "Espagnol",
+  "english": "English",
+  "french": "Francais",
+  "spanish": "Español",
+  "italian": "Italiano",
+  "chinese": "中文",
+  "portuguese": "Português",
   "manageEvmAddresses": "Gestionar monederos",
   "hello": "Hola",
   "lastRentReceived": "Su último alquiler recibido asciende a ",
@@ -17,11 +20,12 @@
   "totalPortfolio": "Portafolio total",
   "wallet": "Monedero",
   "rmm": "RMM",
-  "currency":"Moneda",
+  "currency": "Moneda",
   "rwaHoldings": "RWA Holdings SA",
   "properties": "Propiedades",
   "rented": "Alquilado",
   "rentedUnits": "Unidades alquiladas",
+  "units": "unidades",
   "tokens": "Tokens",
   "totalTokens": "Total de tokens",
   "rents": "Alquileres",
@@ -33,6 +37,7 @@
   "noRentReceived": "No se ha recibido alquiler",
   "finances": "Finanzas",
   "others": "Otros",
+  "othersTitle": "Detalles de la sección Otros",
   "insights": "Información",
   "characteristics": "Características",
   "constructionYear": "Año de construcción",
@@ -70,12 +75,13 @@
   "totalValue": "Valor total",
   "amount": "Cantidad",
   "apy": "APY",
+  "averageApy": "APY promedio global",
   "revenue": "Ingresos",
   "day": "Día",
   "month": "Mes",
   "year": "Año",
   "appName": "RealToken",
-  "appDescription": "aplicación móvil para la comunidad",
+  "appDescription": "Aplicación móvil para la comunidad",
   "realTokensList": "Lista de RealTokens",
   "recentChanges": "Cambios recientes",
   "settings": "Configuración",
@@ -119,7 +125,7 @@
   "sortByName": "Ordenar por nombre",
   "sortByValue": "Ordenar por valor",
   "sortByAPY": "Ordenar por rendimiento",
-  "sortByInitialLaunchDate":"ordenar por agregado recientemente",
+  "sortByInitialLaunchDate": "Ordenar por agregado recientemente",
   "ascending": "Ascendente",
   "descending": "Descendente",
   "tokenDistributionByCity": "Distribución de tokens por ciudad",
@@ -132,59 +138,55 @@
   "manageAddresses": "Añadir monedero",
   "maps": "Mapas",
   "depositBalance": "Depósitos",
-  "borrowBalance": "`Préstamos",
+  "borrowBalance": "Préstamos",
   "usdcDepositBalance": "Saldo de depósitos USDC",
   "usdcBorrowBalance": "Saldo de préstamos USDC",
   "xdaiDepositBalance": "Saldo de depósitos XDAI",
   "xdaiBorrowBalance": "Saldo de préstamos XDAI",
   "ethereumContract": "Contrato de Ethereum",
   "gnosisContract": "Contrato de Gnosis",
-  "viewOnMap":"Ver en el Mapa",
-  "totalRentReceived":"total of revenus",
-  "groupedRentGraph": "Gráfico de Alquiler Agrupado",
-  "cumulativeRentGraph": "Gráfico Acumulativo de Alquileres",
+  "viewOnMap": "Ver en el mapa",
+  "totalRentReceived": "Total de ingresos",
+  "groupedRentGraph": "Alquiler",
+  "cumulativeRentGraph": "Gráfico acumulativo de alquileres",
   "roiPerProperties": "ROI de la propiedad",
-  "roiAlertInfo": "Esta función de ROI está en beta y actualmente se calcula en función de los ingresos recibidos de la propiedad y el valor initial del token.",
-  "recentUpdatesTitle": "últimos 30 días",
+  "roiAlertInfo": "Esta función de ROI está en beta y actualmente se calcula en función de los ingresos recibidos de la propiedad y el valor inicial del token.",
+  "recentUpdatesTitle": "Últimos 30 días",
   "noRecentUpdates": "No hay cambios recientes disponibles.",
   "unknownTokenName": "Nombre desconocido",
   "noImageAvailable": "Enlace de imagen no disponible",
-  "duplicate_title": "propiedades duplicadas",
-  "duplicate": "propiedades presentes en varias carteras/RMM",
+  "duplicate_title": "Propiedades duplicadas",
+  "duplicate": "Propiedades presentes en varias carteras/RMM",
   "futureRents": "Alquileres futuros",
   "noFutureRents": "No hay alquileres futuros",
-  "nextRondays": "siguiente Rondays",
-  "noCommunicatedDate": "fecha no comunicada",
+  "nextRondays": "Siguiente Rondays",
+  "noCommunicatedDate": "Fecha no comunicada",
   "serviceStatusPage": "Estado de los servicios",
   "lastExecution": "Última actualización",
   "allWorkCorrectly": "Todo funciona correctamente",
   "somethingWrong": "Es posible que los datos no estén actualizados",
   "realTTitle": "RealT",
-  "totalTokens": "Total de tokens",
-  "tokens": "tokens",
-  "totalInvestment": "Inversión total",
   "netAnnualRent": "Alquiler neto anual",
-  "totalUnits": "Total de unidades",
-  "units": "unidades",
-  "rentedUnits": "unidades alquiladas",
   "realTPerformance": "Rendimiento de RealT",
-  "annualYield": "rendimiento anual",
-  "textSize":"Tamaño de texto",
-"convertSqft": "Convertir los sqft en m²",
-"rentStartFuture": "Alquiler no iniciado",
-"confirmAction": "Confirmar acción",
-"areYouSureClearData": "¿Estás seguro de que deseas borrar la caché y los datos?",
-"cancel": "Cancelar",
-"confirm": "Confirmar",
-"clearCacheData": "Borrar caché y datos",
-"exportData": "Exportar datos",
-"importData": "Importar datos",
-"exportSuccess": "Datos exportados con éxito",
-"exportFailed": "Error al exportar los datos",
-"importSuccess": "Datos importados con éxito",
-"importFailed": "Error al importar los datos",
-"importExportData": "Importar o exportar datos (zip)",
-"aboutImportExportTitle": "Función de Importación/Exportación",
-"aboutImportExport": "Esta función permite guardar e importar nuevamente los datos del historial de balances (cartera y RMM) en un archivo ZIP.",
-"walletBalanceHistory": "Evolución del Portafolio"
-  }
+  "textSize": "Tamaño de texto",
+  "convertSqft": "Convertir los sqft en m²",
+  "rentStartFuture": "Alquiler no iniciado",
+  "confirmAction": "Confirmar acción",
+  "areYouSureClearData": "¿Estás seguro de que deseas borrar la caché y los datos?",
+  "cancel": "Cancelar",
+  "confirm": "Confirmar",
+  "exportData": "Exportar datos",
+  "importData": "Importar datos",
+  "exportSuccess": "Datos exportados con éxito",
+  "exportFailed": "Error al exportar los datos",
+  "importSuccess": "Datos importados con éxito",
+  "importFailed": "Error al importar los datos",
+  "importExportData": "Importar o exportar datos (zip)",
+  "aboutImportExportTitle": "Función de Importación/Exportación",
+  "aboutImportExport": "Esta función permite guardar e importar nuevamente los datos del historial de balances (cartera y RMM) en un archivo ZIP.",
+  "walletBalanceHistory": "Evolución del portafolio",
+  "hours": "Horas",
+  "days": "Días",
+  "weeks": "Semanas",
+  "period": "Período"
+}
