--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -7,13 +7,16 @@
   "themeUpdated": "Thème mis à jour en {theme}",
   "language": "Langue",
   "languageUpdated": "Langue mise à jour en {language}",
-  "english": "Anglais",
-  "french": "Français",
-  "spanish": "Espagnol",
+  "english": "English",
+  "french": "Francais",
+  "spanish": "Español",
+  "italian": "Italiano",
+  "chinese": "中文",
+  "portuguese": "Português",
   "manageEvmAddresses": "Gérer les portefeuilles",
   "hello": "Bonjour",
   "lastRentReceived": "Votre dernier loyer reçu s'élève à ",
-  "currency":"Monnaie",
+  "currency": "Monnaie",
   "portfolio": "Portefeuille",
   "totalPortfolio": "Portefeuille total",
   "wallet": "Portefeuille",
@@ -22,6 +25,7 @@
   "properties": "Propriétés",
   "rented": "Loué",
   "rentedUnits": "Unités louées",
+  "units": "logements",
   "tokens": "Jetons",
   "totalTokens": "Jetons totaux",
   "rents": "Loyers",
@@ -32,6 +36,7 @@
   "annually": "Annuel",
   "noRentReceived": "Aucun loyer reçu",
   "finances": "Finances",
+  "othersTitle":"'Détails de la section Autres'",
   "others": "Autres",
   "insights": "Aperçus",
   "characteristics": "Caractéristiques",
@@ -70,14 +75,15 @@
   "totalValue": "Valeur totale",
   "amount": "Montant",
   "apy": "Rendement annuel",
+  "averageApy": "APY moyen global",
   "revenue": "Revenu",
   "day": "Jour",
   "month": "Mois",
   "year": "Année",
   "appName": "RealToken",
-  "appDescription": "application mobile",
+  "appDescription": "Application mobile",
   "realTokensList": "Liste des RealTokens",
-  "recentChanges": "Evolutions récentes",
+  "recentChanges": "Évolutions récentes",
   "settings": "Paramètres",
   "about": "À propos",
   "feedback": "Retour d'expérience",
@@ -119,7 +125,7 @@
   "sortByName": "Tri par nom",
   "sortByValue": "Tri par valeur",
   "sortByAPY": "Tri par rendement",
-  "sortByInitialLaunchDate": "tri par ajout recent",
+  "sortByInitialLaunchDate": "Tri par ajout récent",
   "ascending": "Ascendant",
   "descending": "Descendant",
   "tokenDistributionByCity": "Répartition des jetons par ville",
@@ -137,41 +143,35 @@
   "usdcBorrowBalance": "Solde des emprunts USDC",
   "xdaiDepositBalance": "Solde des dépôts XDAI",
   "xdaiBorrowBalance": "Solde des emprunts XDAI",
-  "ethereumContract": "Contract ethereum",
-  "gnosisContract": "Contract gnosis",
-  "viewOnMap": "voir sur la carte",
-  "totalRentReceived": "total des revenus",
-  "groupedRentGraph": "Loyers groupés",
+  "ethereumContract": "Contrat Ethereum",
+  "gnosisContract": "Contrat Gnosis",
+  "viewOnMap": "Voir sur la carte",
+  "totalRentReceived": "Total des revenus",
+  "groupedRentGraph": "Loyers",
   "cumulativeRentGraph": "Cumul des loyers",
-  "roiPerProperties":"ROI de la propriété",
-  "roiAlertInfo":"Cette fonction ROI est en beta, elle est pour le moment calculé en fonction des revenus recus de la propriété et la valeur initiale du token.",
+  "roiPerProperties": "ROI de la propriété",
+  "roiAlertInfo": "Cette fonction ROI est en beta, elle est pour le moment calculée en fonction des revenus reçus de la propriété et la valeur initiale du token.",
   "recentUpdatesTitle": "30 derniers jours",
   "noRecentUpdates": "Aucune modification récente disponible.",
   "unknownTokenName": "Nom inconnu",
   "noImageAvailable": "Lien d'image non disponible",
-  "duplicate_title":"propriétés en doublons",
-  "duplicate": "propriétés présentes sur plusieurs portfeuilles/RMM",
+  "duplicate_title": "Propriétés en doublons",
+  "duplicate": "Propriétés présentes sur plusieurs portefeuilles/RMM",
   "futureRents": "Loyers futurs",
   "noFutureRents": "Aucun loyer futur",
   "nextRondays": "Prochains Rondays",
   "noCommunicatedDate": "Date non communiquée",
   "serviceStatusPage": "Statut des services",
-  "lastExecution": "Derniere mise a jour",
-  "allWorkCorrectly" : "Tout fonctionne correctement",
-  "somethingWrong":"Il se pourrait que les données ne soient pas à jour",
+  "lastExecution": "Dernière mise à jour",
+  "allWorkCorrectly": "Tout fonctionne correctement",
+  "somethingWrong": "Il se pourrait que les données ne soient pas à jour",
   "realTTitle": "RealT",
-  "totalTokens": "Total de tokens",
-  "tokens": "tokens",
-  "totalInvestment": "Investissement total",
   "netAnnualRent": "Loyer net annuel",
-  "totalUnits": "Total d'unités",
-  "units": "unités",
-  "rentedUnits": "unités louées",
   "realTPerformance": "Performance de RealT",
   "annualYield": "Rendement annuel",
-  "textSize":"Taille du text",
-  "convertSqft":"Convertir les sqft a m²",
-  "rentStartFuture":"Loyer non demarré",
+  "textSize": "Taille du texte",
+  "convertSqft": "Convertir les sqft en m²",
+  "rentStartFuture": "Loyer non démarré",
   "confirmAction": "Confirmer l'action",
   "areYouSureClearData": "Êtes-vous sûr de vouloir effacer le cache et les données ?",
   "cancel": "Annuler",
@@ -183,8 +183,12 @@
   "exportFailed": "Échec de l'exportation des données",
   "importSuccess": "Données importées avec succès",
   "importFailed": "Échec de l'importation des données",
-  "importExportData":"Importer ou exporter les données (zip)",
-  "aboutImportExportTitle":"Fonction import/export",
-  "aboutImportExport":"Cette fonction permet de sauvegarder et ré-importer les données des historiques de balances (wallet et RMM) dans un fichier ZIP",
-  "walletBalanceHistory":"Evolution du portfeuille"
+  "importExportData": "Importer ou exporter les données (zip)",
+  "aboutImportExportTitle": "Fonction import/export",
+  "aboutImportExport": "Cette fonction permet de sauvegarder et ré-importer les données des historiques de balances (wallet et RMM) dans un fichier ZIP.",
+  "walletBalanceHistory": "Évolution du portefeuille",
+  "hours": "Heures",
+  "days": "Jours",
+  "weeks": "Semaines",
+  "period": "Période"
 }
